; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_s3c24a0.c_s3c24a0_serial_getsource.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_s3c24a0.c_s3c24a0_serial_getsource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_port = type { i32 }
%struct.s3c24xx_uart_clksrc = type { i32, i8* }

@S3C2410_UCON = common dso_local global i32 0, align 4
@S3C2410_UCON_UCLK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c"uclk\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"pclk\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uart_port*, %struct.s3c24xx_uart_clksrc*)* @s3c24a0_serial_getsource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s3c24a0_serial_getsource(%struct.uart_port* %0, %struct.s3c24xx_uart_clksrc* %1) #0 {
  %3 = alloca %struct.uart_port*, align 8
  %4 = alloca %struct.s3c24xx_uart_clksrc*, align 8
  %5 = alloca i64, align 8
  store %struct.uart_port* %0, %struct.uart_port** %3, align 8
  store %struct.s3c24xx_uart_clksrc* %1, %struct.s3c24xx_uart_clksrc** %4, align 8
  %6 = load %struct.uart_port*, %struct.uart_port** %3, align 8
  %7 = load i32, i32* @S3C2410_UCON, align 4
  %8 = call i64 @rd_regl(%struct.uart_port* %6, i32 %7)
  store i64 %8, i64* %5, align 8
  %9 = load %struct.s3c24xx_uart_clksrc*, %struct.s3c24xx_uart_clksrc** %4, align 8
  %10 = getelementptr inbounds %struct.s3c24xx_uart_clksrc, %struct.s3c24xx_uart_clksrc* %9, i32 0, i32 0
  store i32 1, i32* %10, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* @S3C2410_UCON_UCLK, align 8
  %13 = and i64 %11, %12
  %14 = icmp ne i64 %13, 0
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0)
  %17 = load %struct.s3c24xx_uart_clksrc*, %struct.s3c24xx_uart_clksrc** %4, align 8
  %18 = getelementptr inbounds %struct.s3c24xx_uart_clksrc, %struct.s3c24xx_uart_clksrc* %17, i32 0, i32 1
  store i8* %16, i8** %18, align 8
  ret i32 0
}

declare dso_local i64 @rd_regl(%struct.uart_port*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
